Add class selectors to all sub-pages
Now all the sub-pages has class selectors that has distributed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .menu {
     background-color: bisque;
     font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-weight: bold;
     font-size: 18px;
 }
 
