Add lines to style.css
Lines for properties of selectors added to style.css and html links were fixed

--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
 .menu {
-    background-color: bisque;
+    color: black;
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-weight: bold;
     font-size: 18px;
+}
+
+.menu:hover {
+    background-color: bisque;
 }
 
 ul li {
     margin-top: 15px;
 }
 
+.headline {
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-weight: bold;
+    text-decoration-line: underline;
+}
+
+.subline {
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-weight: bold;
+}
+
+.descrp {
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+}
+
+.steps {
+    background-color: beige;
+    color:teal;
+}
