--- a/style.css
+++ b/style.css
@@ -7,9 +7,12 @@
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-weight: bold;
     font-size: 18px;
-    padding: 5px;
+    padding: 7px 5px;
     border: 3px solid black;
-    margin: 10px;
+    width: 130px;
+    height: 45px;
+    display: inline-block;
+    text-align: center;
 }
 
 .menu:hover {
