--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 .menu {
     color: black;
     font-family: Helvetica, 'Times New Roman', sans-serif;
