Update headline class in style.css

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ ul li {
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-weight: bold;
     text-decoration-line: underline;
+    text-align: center;
 }
 
 .subline {
