--- a/style.css
+++ b/style.css
@@ -42,10 +42,12 @@ ul li {
 .subline {
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-weight: bold;
+    text-align: center;
 }
 
 .descrp {
     font-family: Helvetica, 'Times New Roman', sans-serif;
+    text-align: center;
 }
 
 .steps {
