--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ a {
     background-color: bisque;
 }
 
+.menu:active{
+  box-shadow: inset 0 2px 2px 0 rgba(0,0,0,0.5);
+}
+
 ul li {
     margin-top: 25px;
     margin-bottom: 25px;
@@ -71,4 +75,20 @@ ul li {
     width: 45%;
     display: block;
     float: right;
+}
+
+.return {
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.return:hover {
+    background-color: rgb(63, 63, 63);
+}
+
+.return:active{
+  box-shadow: 4px 2px 2px 0 rgba(0,0,0,0.5);
 }
